css in the Education component fixed to look good on iPhones in potrait

--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -34,8 +34,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .educationCardTitle {
@@ -50,3 +50,28 @@
     padding-bottom: 10px;
 }
 
+/* CSS rules for iPhones in portrait orientation */
+@media only screen and (min-width: 320px) and (max-width: 414px) and (orientation: portrait) {
+    .educationCardWrapper {
+        flex-direction: column;
+        margin-bottom: 15px;
+    }
+
+    .educationCard {
+        width: 100%; /* adjust width as needed */
+        height: 200px; /* adjust height as needed */
+        margin-bottom: 10px; 
+    }
+
+    .educationCardTitle {
+        font-size: 20px;
+        font-weight: 800;
+        /* padding-top: 10px; */
+    }
+    
+    .educationCardSubtitle {
+        font-size: 16px;
+        font-weight: 400;
+        padding-bottom: 10px;
+    }
+}
